@@ -314,10 +314,10 @@ elif [ X"${KERNEL_NAME}" == X'OPENBSD' ]; then
     export RC_CONF_LOCAL='/etc/rc.conf.local'
     export SHELL_BASH='/usr/local/bin/bash'
     export CMD_PYTHON3='/usr/local/bin/python3'
-    export CMD_PIP3='pip3.7'
+    export CMD_PIP3='pip3.8'
 
-    # Unsupported release: 6.6 and earlier versions.
-    if echo "${DISTRO_VERSION}" | grep '^6.[0123456]' &>/dev/null ; then
+    # Unsupported release: 6.7 and earlier versions.
+    if echo "${DISTRO_VERSION}" | grep '^6.[01234567]' &>/dev/null ; then
         export UNSUPPORTED_RELEASE='YES'
     fi
 else
