@@ -1,4 +1,10 @@
 iRedMail-1.3.2:
+    * Supports new distribution releases:
+        + OpenBSD 6.8. All backends are supported: MariaDB, PostgreSQL, OpenLDAP.
+
+    * DROPPED distribution release:
+        - OpenBSD 6.7. Please use the latest stable release 6.8 instead.
+
     * Improvements:
         + [Nginx] Enable http2 support by default.
         + [Roundcube] Enable plugin `zipdownload` by default. It adds an
